--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="content">
   <img src="https://raw.githubusercontent.com/tmildred222/new/refs/heads/main/Screenshot%202025-04-26%20at%2023.05.52.png" alt="Diskussion im Fernsehen">
   <p>Erfahren Sie mehr über aktuelle Entwicklungen und spannende Interviews direkt im Fernsehen.</p>
-  <a href="#" class="button hidden" id="watchButton">Jetzt ansehen</a>
+  <a href="#" class="button" id="watchButton">Jetzt ansehen</a>
 </div>
 
 <script>
