--- a/index2.html
+++ b/index2.html
@@ -12,15 +12,27 @@
       max-width: 700px;
       margin: 0 auto;
       padding: 20px;
-      color: #222;
-      background: #f9f9f9;
+      color: #fff;
+      background: #0d1b2a;
     }
     h1, h2 {
-      color: #333;
+      color: #fefefe;
     }
     .meta {
       font-size: 14px;
-      color: #666;
+      color: #cccccc;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .meta img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+    }
+    .divider {
+      border-bottom: 1px solid #666;
+      margin: 16px 0;
     }
     .video-placeholder {
       background: #000;
@@ -28,6 +40,7 @@
       padding: 40px;
       text-align: center;
       margin: 20px 0;
+      border-radius: 8px;
     }
     .cta {
       display: inline-block;
@@ -45,19 +58,27 @@
     footer {
       margin-top: 40px;
       font-size: 13px;
-      color: #999;
+      color: #bbbbbb;
       line-height: 1.5;
-      border-top: 1px solid #ddd;
+      border-top: 1px solid #444;
       padding-top: 20px;
     }
     .links {
       margin-top: 10px;
     }
+    a {
+      color: #8ab4f8;
+    }
   </style>
 </head>
 <body>
 
-  <div class="meta">Top Schweizer KI-Analyst &bull; Veröffentlicht: vor 12 Stunden &bull; Aufrufe: 134.618</div>
+  <div class="meta">
+    <img src="logo.png" alt="Analyst" />
+    <div>Top Schweizer KI-Analyst &bull; Veröffentlicht: vor 12 Stunden &bull; Aufrufe: 134.618</div>
+  </div>
+
+  <div class="divider"></div>
 
   <h1>ETH-Forscher enthüllt: Diese neue Technologie hilft Privatanlegern, Marktbewegungen frühzeitig zu erkennen</h1>
 
