--- a/index2.html
+++ b/index2.html
@@ -74,7 +74,7 @@
 <body>
 
   <div class="meta">
-     <img src="https://github.com/tmildred222/new/blob/main/top.png" alt="Analyst" />
+     <img src="https://raw.githubusercontent.com/tmildred222/new/refs/heads/main/top.png" alt="Analyst" />
     <div>Top Schweizer KI-Analyst &bull; Veröffentlicht: vor 12 Stunden &bull; Aufrufe: 134.618</div>
   </div>
 
