--- a/index2.html
+++ b/index2.html
@@ -98,7 +98,7 @@
   </p>
 
   <a class="cta" href="https://deinlinkhier.com" target="_blank">Jetzt Video ansehen – So funktioniert die neue Technologie</a>
-
+  <p style="margin-top: 20px; text-align: center;">Copyright 2025. All rights reserved.</p>
   <footer>
     <p>
       Diese Seite steht in keiner Verbindung zu Google, YouTube oder anderen Marken.<br>
