--- a/index2.html
+++ b/index2.html
@@ -80,7 +80,7 @@
 
   <div class="divider"></div>
 
-  <h1>ETH-Forscher enthüllt: Diese neue Technologie hilft Privatanlegern, Marktbewegungen frühzeitig zu erkennen</h1>
+  <h1>Zürcher KI-Experten enthüllen: Mit diesem Trick bleiben Anleger dem Markt voraus</h1>
 
   <div class="video-placeholder">
     ▶️ Jetzt Video ansehen – So funktioniert der neue Handels-Algorithmus<br>
