--- a/index2.html
+++ b/index2.html
@@ -42,16 +42,20 @@
       margin: 20px 0;
       border-radius: 8px;
     }
-    .cta {
-      display: inline-block;
-      padding: 14px 24px;
-      background-color: #007bff;
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 6px;
-      margin-top: 20px;
-    }
+.cta {
+  display: block;
+  margin: 30px auto;
+  font-family: "Trebuchet MS", sans-serif;
+  padding: 20px 36px;
+  background-color: #ff4f5e;
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 22px;
+  border-radius: 12px;
+  transition: background-color 0.3s ease;
+  text-align: center;
+}
     .cta:hover {
       background-color: #0056b3;
     }
