--- a/index2.html
+++ b/index2.html
@@ -91,6 +91,7 @@
     <small style="display:block;margin-top:10px;">(Video hier einbetten oder verlinken)</small>
   </div>
 
+  <a class="cta" href="https://deinlinkhier.com" target="_blank">Jetzt Video ansehen – So funktioniert die neue Technologie</a>
   <p>
     Diese Technologie basiert auf aktuellen Forschungsergebnissen aus Zürich und nutzt künstliche Intelligenz, um Muster in Marktbewegungen frühzeitig zu erkennen.
   </p>
