--- a/index2.html
+++ b/index2.html
@@ -84,8 +84,10 @@
 
   <div class="divider"></div>
 
-  <h1>Zürcher KI-Experten enthüllen: Mit diesem Trick bleiben Anleger dem Markt voraus</h1>
-
+ <p style="margin-top: 20px; text-align: center; <h1>text-align: center;Zürcher KI-Experten enthüllen: Mit diesem Trick bleiben Anleger dem Markt voraus"></h1></p>
+  
+  <p style="margin-top: 20px; text-align: center;">Copyright 2025. All rights reserved.</p>
+  
   <div class="video-placeholder">
     ▶️ Jetzt Video ansehen – So funktioniert der neue Handels-Algorithmus<br>
     <small style="display:block;margin-top:10px;">(Video hier einbetten oder verlinken)</small>
