--- a/index2.html
+++ b/index2.html
@@ -84,9 +84,9 @@
 
   <div class="divider"></div>
 
- <p style="margin-top: 20px; text-align: center; <h1>text-align: center;Zürcher KI-Experten enthüllen: Mit diesem Trick bleiben Anleger dem Markt voraus"></h1></p>
-  
-  <p style="margin-top: 20px; text-align: center;">Copyright 2025. All rights reserved.</p>
+<h1 style="text-align: center;">
+  Zürcher KI-Experten enthüllen: Mit diesem Trick bleiben Anleger dem Markt voraus
+</h1>
   
   <div class="video-placeholder">
     ▶️ Jetzt Video ansehen – So funktioniert der neue Handels-Algorithmus<br>
