--- a/index2.html
+++ b/index2.html
@@ -103,6 +103,9 @@
   <p>
     Viele klassische Anbieter ignorieren solche Lösungen – sie könnten ihre Geschäftsmodelle verändern.
   </p>
+  <p>
+  <strong>&gt;&gt; Mehr erfahren</strong>
+</p>
 
   <a class="cta" href="https://deinlinkhier.com" target="_blank">Jetzt Video ansehen – So funktioniert die neue Technologie</a>
   <p style="margin-top: 20px; text-align: center;">Copyright 2025. All rights reserved.</p>
