--- a/index2.html
+++ b/index2.html
@@ -93,7 +93,7 @@
     <small style="display:block;margin-top:10px;">(Video hier einbetten oder verlinken)</small>
   </div>
 
-  <a class="cta" href="https://deinlinkhier.com" target="_blank">Jetzt Video ansehen – So funktioniert die neue Technologie</a>
+  <a class="cta" href="https://deinlinkhier.com" target="_blank">Jetzt Video ansehen</a> 
   <p>
     Diese Technologie basiert auf aktuellen Forschungsergebnissen aus Zürich und nutzt künstliche Intelligenz, um Muster in Marktbewegungen frühzeitig zu erkennen.
   </p>
@@ -107,7 +107,7 @@
   <strong>&gt;&gt; Mehr erfahren</strong>
 </p>
 
-  <a class="cta" href="https://deinlinkhier.com" target="_blank">Jetzt Video ansehen – So funktioniert die neue Technologie</a>
+  <a class="cta" href="https://deinlinkhier.com" target="_blank">Jetzt Video ansehen</a> 
   <p style="margin-top: 20px; text-align: center;">Copyright 2025. All rights reserved.</p>
   <footer>
     <p>
