--- a/index2.html
+++ b/index2.html
@@ -79,9 +79,15 @@
 
   <div class="meta">
      <img src="https://raw.githubusercontent.com/tmildred222/new/refs/heads/main/top2.png" alt="Analyst" />
-    <div style="font-size: 14px; color: #e0e0e0;">
-  <div>Top Schweizer KI-Analyst</div>
-  <div>Veröffentlicht: vor 12 Stunden &bull; Aufrufe: 134.618</div>
+<div style="font-size: 14px; color: #e0e0e0;">
+  <div style="font-size: 16px; font-weight: bold;">
+    Top Schweizer KI-Analyst
+  </div>
+  <div>
+    Veröffentlicht: vor 12 Stunden &bull; Aufrufe: 134.618
+  </div>
+</div>
+
 </div>
 
   </div>
