--- a/index2.html
+++ b/index2.html
@@ -84,7 +84,7 @@
     Top Schweizer KI-Analyst
   </div>
   <div>
-    Veröffentlicht: vor 12 Stunden &bull; Aufrufe: 134.618
+    Veröffentlicht: vor 12 Stunden | Aufrufe: 134.618
   </div>
 </div>
 
