--- a/index2.html
+++ b/index2.html
@@ -94,9 +94,10 @@
 
   <div class="divider"></div>
 
-<h1 style="text-align: center;">
-  Zürcher KI-Experten enthüllen: Mit diesem Trick bleiben Anleger dem Markt voraus
+<h1 style="text-align: center; font-size: 28px; font-weight: bold; color: white; font-family: Arial, sans-serif;">
+  Zürcher KI-Experten Enthüllen: Mit <span style="color: #FFA500;">Diesem Trick</span> Bleiben Anleger Dem Markt Voraus
 </h1>
+
   
   <div class="video-placeholder">
     ▶️ Jetzt Video ansehen – So funktioniert der neue Handels-Algorithmus<br>
