--- a/index2.html
+++ b/index2.html
@@ -99,10 +99,13 @@
 </h1>
 
   
-  <div class="video-placeholder">
-    ▶️ Jetzt Video ansehen – So funktioniert der neue Handels-Algorithmus<br>
-    <small style="display:block;margin-top:10px;">(Video hier einbetten oder verlinken)</small>
-  </div>
+<div class="video-placeholder" style="padding: 0; background: none;">
+  <video width="100%" autoplay muted playsinline controls style="border-radius: 12px;">
+    <source src="https://raw.githubusercontent.com/tmildred222/new/refs/heads/main/creative.mp4" type="video/mp4">
+    Dein Browser unterstützt kein Video.
+  </video>
+</div>
+
 
   <a class="cta" href="https://deinlinkhier.com" target="_blank">Jetzt Video ansehen</a> 
   <p>
