--- a/index2.html
+++ b/index2.html
@@ -100,7 +100,7 @@
 
   
 <div class="video-placeholder" style="padding: 0; background: none;">
-  <video width="100%" controls playsinline muted poster="https://raw.githubusercontent.com/tmildred222/new/refs/heads/main/preview.png" style="border-radius: 12px;">
+  <video width="100%" controls playsinline muted poster="https://raw.githubusercontent.com/tmildred222/new/refs/heads/main/preview.jpg" style="border-radius: 12px;">
   <source src="https://raw.githubusercontent.com/tmildred222/new/refs/heads/main/creative.mp4" type="video/mp4">
   Dein Browser unterstützt kein Video.
 </video>
