--- a/index2.html
+++ b/index2.html
@@ -99,12 +99,14 @@
 </h1>
 
   
-<div class="video-placeholder" style="padding: 0; background: none;">
-  <video width="100%" controls playsinline muted poster="https://raw.githubusercontent.com/tmildred222/new/refs/heads/main/preview.jpg" controls controlsList="nodownload" style="border-radius: 12px;">
-  <source src="https://raw.githubusercontent.com/tmildred222/new/refs/heads/main/creative.mp4" type="video/mp4">
-  Dein Browser unterstützt kein Video.
-</video>
-</div>
+<a href="https://deinlinkhier.com" target="_blank" style="display: block; position: relative; max-width: 700px; margin: 20px auto; border-radius: 12px; overflow: hidden;">
+  <img src="https://raw.githubusercontent.com/tmildred222/new/refs/heads/main/main-image.jpg" alt="Jetzt Video ansehen" style="width: 100%; display: block;">
+  <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
+              background-color: rgba(0,0,0,0.6); color: #fff; padding: 14px 24px;
+              border-radius: 50px; font-size: 20px; font-weight: bold; text-align: center;">
+    ▶️ Jetzt Video ansehen
+  </div>
+</a>
 
 
 
