--- a/index2.html
+++ b/index2.html
@@ -108,18 +108,21 @@
 
 
   <a class="cta" href="https://deinlinkhier.com" target="_blank">Jetzt Video ansehen</a> 
-  <p>
-    Diese Technologie basiert auf aktuellen Forschungsergebnissen aus Zürich und nutzt künstliche Intelligenz, um Muster in Marktbewegungen frühzeitig zu erkennen.
+  
+<div style="max-width: 700px; margin: 40px auto; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 18px; line-height: 1.6; color: #ffffff;">
+  <p style="margin-bottom: 28px;">
+    Entwickelt in Zürich. Gestützt auf modernste KI-Forschung. Dieses System erkennt Muster im Markt, bevor sie sichtbar werden.
   </p>
-  <p>
-    Zahlreiche Nutzer*innen haben das System getestet und berichten über spannende Erkenntnisse und einfache Bedienung – ganz ohne Vorkenntnisse.
+  <p style="margin-bottom: 28px;">
+    Es ist intuitiv. Schnell. Und funktioniert – auch ohne Vorkenntnisse. Nutzer berichten von Klarheit, Kontrolle und völlig neuen Einsichten.
   </p>
-  <p>
-    Viele klassische Anbieter ignorieren solche Lösungen – sie könnten ihre Geschäftsmodelle verändern.
+  <p style="margin-bottom: 28px;">
+    Während andere zögern, liefert diese Technologie den entscheidenden Vorteil.
   </p>
-  <p>
-  <strong>&gt;&gt; Mehr erfahren</strong>
-</p>
+  <p style="font-weight: bold; font-size: 20px; color: #f4c542; margin-top: 40px;">
+    &gt;&gt; Jetzt mehr erfahren
+  </p>
+</div>
 
   <a class="cta" href="https://deinlinkhier.com" target="_blank">Jetzt Video ansehen</a> 
   <p style="margin-top: 20px; text-align: center;">Copyright 2025. All rights reserved.</p>
