--- a/index2.html
+++ b/index2.html
@@ -126,19 +126,21 @@
 
   <a class="cta" href="https://deinlinkhier.com" target="_blank">Jetzt Video ansehen</a> 
   <p style="margin-top: 20px; text-align: center;">Copyright 2025. All rights reserved.</p>
-  <footer>
-    <p>
-      Diese Seite steht in keiner Verbindung zu Google, YouTube oder anderen Marken.<br>
-      Diese Veröffentlichung dient ausschließlich zu Informationszwecken und stellt keine Finanz- oder Investitionsempfehlung dar.<br>
-      Bitte ziehen Sie einen unabhängigen Finanzberater hinzu, bevor Sie Entscheidungen treffen.
-    </p>
+  
+<footer style="margin-top: 60px; padding-top: 40px; border-top: 1px solid #444; color: #cccccc; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1.6; text-align: center;">
+  <p style="margin-bottom: 20px;">
+    Diese Seite steht in keiner Verbindung zu Google, YouTube oder anderen Marken.<br>
+    Die Inhalte dienen ausschließlich allgemeinen Informationszwecken und stellen keine Finanzberatung dar.<br>
+    Bitte konsultieren Sie einen unabhängigen Finanzexperten, bevor Sie Investitionsentscheidungen treffen.
+  </p>
 
-    <div class="links">
-      Kontakt: <a href="mailto:support@deinprojekt.de">support@deinprojekt.de</a> &nbsp;•&nbsp;
-      <a href="#">Datenschutzerklärung</a> &nbsp;•&nbsp;
-      <a href="#">Impressum</a>
-    </div>
-  </footer>
+  <div class="links" style="margin-top: 20px;">
+    Kontakt: <a href="mailto:support@deinprojekt.de" style="color: #90cdf4; text-decoration: none;">support@deinprojekt.de</a> &nbsp;•&nbsp;
+    <a href="#" style="color: #90cdf4; text-decoration: none;">Datenschutzerklärung</a> &nbsp;•&nbsp;
+    <a href="#" style="color: #90cdf4; text-decoration: none;">Impressum</a>
+  </div>
+</footer>
+
 
 </body>
 </html>
