--- a/index2.html
+++ b/index2.html
@@ -136,7 +136,7 @@
 
   <div class="links" style="margin-top: 20px;">
     Kontakt: <a href="mailto:support@deinprojekt.de" style="color: #90cdf4; text-decoration: none;">support@deinprojekt.de</a> &nbsp;•&nbsp;
-    <a href="/Datenschutzerklärung.html" style="color: #90cdf4; text-decoration: none;">Datenschutzerklärung</a> &nbsp;•&nbsp;
+    <a href="/datenschutzerklaerung.html" style="color: #90cdf4; text-decoration: none;">Datenschutzerklärung</a> &nbsp;•&nbsp;
     <a href="/Impressum.html" style="color: #90cdf4; text-decoration: none;">Impressum</a>
   </div>
 </footer>
