--- a/index2.html
+++ b/index2.html
@@ -119,9 +119,13 @@
   <p style="margin-bottom: 28px;">
     Während andere zögern, liefert diese Technologie den entscheidenden Vorteil.
   </p>
-  <p style="font-weight: bold; font-size: 20px; color: #f4c542; margin-top: 40px;">
+  
+<p style="font-weight: bold; font-size: 20px; color: #f4c542; margin-top: 40px;">
+  <a href="https://deinlinkhier.com" style="color: #f4c542; text-decoration: none;">
     &gt;&gt; Jetzt mehr erfahren
-  </p>
+  </a>
+</p>
+
 </div>
 
   <a class="cta" href="https://deinlinkhier.com" target="_blank">Jetzt Video ansehen</a> 
