--- a/index2.html
+++ b/index2.html
@@ -139,7 +139,7 @@
   </p>
 
   <div class="links" style="margin-top: 20px;">
-    Kontakt: <a href="mailto:support@deinprojekt.de" style="color: #90cdf4; text-decoration: none;">support@deinprojekt.de</a> &nbsp;•&nbsp;
+    Kontakt: <a href="mailto:support@cleverpath.app" style="color: #90cdf4; text-decoration: none;">support@cleverpath.app</a> &nbsp;•&nbsp;
     <a href="/datenschutzerklaerung.html" style="color: #90cdf4; text-decoration: none;">Datenschutzerklärung</a> &nbsp;•&nbsp;
     <a href="/impressum.html" style="color: #90cdf4; text-decoration: none;">Impressum</a>
   </div>
