--- a/index.html
+++ b/index.html
@@ -109,22 +109,22 @@
   
 <div style="max-width: 700px; margin: 40px auto; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 18px; line-height: 1.6; color: #ffffff;">
   <p style="margin-bottom: 28px;">
-    Entwickelt in Zürich. Gestützt auf modernste KI-Forschung. Dieses System erkennt Muster im Markt, bevor sie sichtbar werden.
+    Dieser „Zürich KI-Trick“ wurde wissenschaftlich entwickelt, um Marktbewegungen zu erkennen – noch bevor sie überhaupt beginnen.
   </p>
   <p style="margin-bottom: 28px;">
-    Es ist intuitiv. Schnell. Und funktioniert – auch ohne Vorkenntnisse. Nutzer berichten von Klarheit, Kontrolle und völlig neuen Einsichten.
+    Bereits Tausende von Privatanlegern nutzen diese Technologie, um Klarheit, Sicherheit und Ergebnisse zu erzielen – ganz ohne Vorkenntnisse.
   </p>
   <p style="margin-bottom: 28px;">
-    Während andere zögern, liefert diese Technologie den entscheidenden Vorteil.
+    Traditionelle Anbieter ignorieren sie… denn sie stellt ihr gesamtes Geschäftsmodell infrage.
   </p>
   
-<p style="font-weight: bold; font-size: 20px; color: #f4c542; margin-top: 40px;">
-  <a href="https://google.com" style="color: #f4c542; text-decoration: none;">
-    &gt;&gt; Jetzt mehr erfahren
-  </a>
-</p>
-
+  <p style="font-weight: bold; font-size: 20px; color: #f4c542; margin-top: 40px;">
+    <a href="https://google.com" style="color: #f4c542; text-decoration: none;">
+      &gt;&gt; Jetzt mehr erfahren
+    </a>
+  </p>
 </div>
+
 
   <a class="cta" href="https://google.com" target="_blank">Jetzt Video ansehen</a> 
   <p style="margin-top: 20px; text-align: center;">Copyright 2025. All rights reserved.</p>
