--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <div class="divider"></div>
 
 <h1 style="text-align: center; font-size: 28px; font-weight: bold; color: white; font-family: Arial, sans-serif;">
-  Zürcher KI-Experten Enthüllen: Mit <span style="color: #FFA500;">Diesem Trick</span> Bleiben Anleger Dem Markt Voraus
+  Der <span style="color: #FFA500;">Größte Deal</span> in der Geschichte der beliebten TV-Show!
 </h1>
 
   
