--- a/index.html
+++ b/index.html
@@ -109,15 +109,18 @@
   
 <div style="max-width: 700px; margin: 40px auto; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 18px; line-height: 1.6; color: #ffffff;">
   <p style="margin-bottom: 28px;">
-    Dieser „Zürich KI-Trick“ wurde wissenschaftlich entwickelt, um Marktbewegungen zu erkennen – noch bevor sie überhaupt beginnen.
+    Die Idee wurde besonders von ganz normalen Deutschen gefeiert!
   </p>
   <p style="margin-bottom: 28px;">
-    Bereits Tausende von Privatanlegern nutzen diese Technologie, um Klarheit, Sicherheit und Ergebnisse zu erzielen – ganz ohne Vorkenntnisse.
+   Mehr als tausende Menschen jeden Alters nutzen bereits dieses einfache System, um ihr Leben in Wohlstand zu verwandeln.
   </p>
   <p style="margin-bottom: 28px;">
-    Traditionelle Anbieter ignorieren sie… denn sie stellt ihr gesamtes Geschäftsmodell infrage.
+    Die Milliardenbranche will nicht, dass Sie dieses Video sehen – denn es bedroht ernsthaft ihre Gewinne...
   </p>
-  
+    <p style="margin-bottom: 28px;">
+    Tippen Sie unten auf „Jetzt ansehen“, um zu erfahren, wie Sie es heute noch nutzen können!
+  </p>
+
   <p style="font-weight: bold; font-size: 20px; color: #f4c542; margin-top: 40px;">
     <a href="https://google.com" style="color: #f4c542; text-decoration: none;">
       &gt;&gt; Jetzt mehr erfahren
