--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Neue KI-Technologie für Anleger</title>
+  <title>Der größte Deal</title>
   <meta name="description" content="Wie KI-Märkte verändert: Eine neutrale Analyse über neue Tools im Finanzbereich">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <style>
@@ -92,7 +92,7 @@
 
   <div class="divider"></div>
 
-<h1 style="text-align: center; font-size: 28px; font-weight: bold; color: white; font-family: Arial, sans-serif;">
+<h1 style="text-align: font-size: 28px; font-weight: bold; color: white; font-family: Arial, sans-serif;">
   Der <span style="color: #FFA500;">Größte Deal</span> in der Geschichte der beliebten TV-Show!
 </h1>
 
