--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </h1>
 
   
-<a href="https://google.com" target="_blank" style="display: block; position: relative; max-width: 700px; margin: 20px auto; border-radius: 12px; overflow: hidden;">
+<a href="https://www.youtube.com/watch?v=8o971FmLOZo&pp=ygUTYWkgcm9ib3QgdHJhZGUgbmV3cw%3D%3D" target="_blank" style="display: block; position: relative; max-width: 700px; margin: 20px auto; border-radius: 12px; overflow: hidden;">
   <img src="https://raw.githubusercontent.com/tmildred222/new/refs/heads/main/main.jpg" style="width: 100%; display: block;">
 </a>
 
@@ -105,7 +105,7 @@
 
 
 
-  <a class="cta" href="https://google.com" target="_blank">Jetzt Video ansehen</a> 
+  <a class="cta" href="https://www.youtube.com/watch?v=8o971FmLOZo&pp=ygUTYWkgcm9ib3QgdHJhZGUgbmV3cw%3D%3D" target="_blank">Jetzt Video ansehen</a> 
   
 <div style="max-width: 700px; margin: 40px auto; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 18px; line-height: 1.6; color: #ffffff;">
   <p style="margin-bottom: 28px;">
@@ -122,14 +122,14 @@
   </p>
 
   <p style="font-weight: bold; font-size: 20px; color: #f4c542; margin-top: 40px;">
-    <a href="https://google.com" style="color: #f4c542; text-decoration: none;">
+    <a href="https://www.youtube.com/watch?v=8o971FmLOZo&pp=ygUTYWkgcm9ib3QgdHJhZGUgbmV3cw%3D%3D" style="color: #f4c542; text-decoration: none;">
       &gt;&gt; Jetzt mehr erfahren
     </a>
   </p>
 </div>
 
 
-  <a class="cta" href="https://google.com" target="_blank">Jetzt Video ansehen</a> 
+  <a class="cta" href="https://www.youtube.com/watch?v=8o971FmLOZo&pp=ygUTYWkgcm9ib3QgdHJhZGUgbmV3cw%3D%3D" target="_blank">Jetzt Video ansehen</a> 
   <p style="margin-top: 20px; text-align: center;">Copyright 2025. All rights reserved.</p>
   
 <footer style="margin-top: 60px; padding-top: 40px; border-top: 1px solid #444; color: #cccccc; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1.6; text-align: center;">
